vivi.core changes
=================

4.61.4 (unreleased)
-------------------

- ZON-6764: Calculate uuid of dynamic folder content from uniqueId


4.61.3 (2021-08-20)
-------------------

- BUG-1430: gracefully handle locked images during brightcove import


4.61.2 (2021-08-20)
-------------------

- ZON-6316: Ensure that the audio_speechbert property occurs in XML


4.61.1 (2021-08-19)
-------------------

- TOPIC-15: Make TMS kpi field names configurable


4.61.0 (2021-08-19)
-------------------

- FIX: Make z.c.cp.BlockLayout default constructor conform to its interface


4.60.3 (2021-08-18)
-------------------

- TOPIC-15: Preserve externally populated `kpi` fields during TMS indexing


4.60.2 (2021-08-05)
-------------------

- TOPIC-42: Fix IndexError when trying to request related topicpages


4.60.1 (2021-08-02)
-------------------

- ZON-6301: Adds checkbox on CPs in SEO tab, to enable RSS-Feed single tracking
- FIX: Do not fail to rerurn related topics if we receive a nonexisting one


4.60.0 (2021-07-28)
-------------------

- TOPIC-39: Hide hide_dupes checkbox for reach as automatic area source
- TOPIC-39: Enable autopilot checkbox when automatic area source is changed
- BUG-1437: Skip tests with non expected TechnicalErrors
- TOPIC-19: Fix multiple sort order possibilities and be more defensive


4.59.4 (2021-07-22)
-------------------

- MAINT: Add base KPI Implementation to ensure adapting it never fails


4.59.3 (2021-07-21)
-------------------

- ZON-6371: Fix invalid host matching for @ containig urls.


4.59.2 (2021-07-20)
-------------------

- ZON-6371: Do not set links with internal hosts like vivi.zeit.de.


4.59.1 (2021-07-20)
-------------------

- ZON-6482: Enable speechbert by default for articles with no genre


4.59.0 (2021-07-19)
-------------------

- TOPIC-36: Add reach as automatic area source

- OPS-2077: Log failed celery tasks, so we can debug them
- TOPIC-19: Randomly sorted content for automatic areas
