@@ -6,6 +6,8 @@ vivi.core changes
 
 - ZON-6764: Calculate uuid of dynamic folder content from uniqueId
 
+- ZO-169: Support `is_news` attribute in products.xml
+
 
 4.61.3 (2021-08-20)
 -------------------
